# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  diff.py  file_reader.py
gendiff/builder/: build_diff.py
gendiff/formatter/: stylish.py
gendiff/formatters/: json.py  plain.py
gendiff/scripts/: main.py
tests/: test_build_diff.py  test_diff.py  test_json.py  test_plain.py  test_stylish.py
